--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 Flask==2.3.2
-Flask-WTF==1.1.1
 Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.4
-Flask-Login==0.6.2
-Flask-Bcrypt==1.0.1
+Flask-Limiter==2.1.0
+Flask-Talisman==0.15.0
 gunicorn==21.2.0
 
 # For linting and code formatting
@@ -12,15 +10,12 @@ black==23.12.0
 
 # For testing
 pytest==7.4.2
-pytest-flask==1.3.0
-
-
+pytest-flask==1.2.0
 coverage==7.3.1
 
-# Database driver (e.g., for PostgreSQL or MySQL)
-psycopg2-binary==2.9.8  # For PostgreSQL
-# mysql-connector-python==8.1.0  # Uncomment if using MySQL
+# Database driver (SQLite is used in your app, so psycopg2 is unnecessary)
+# psycopg2-binary==2.9.8  # Remove as SQLite is used
 
-# Additional utilities (add/remove as needed)
+# Additional utilities
 requests==2.31.0
 python-dotenv==1.0.0
