--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.2
 Flask-SQLAlchemy==3.0.5
 Flask-Limiter==2.1.0
-Flask-Talisman==0.15.0
+Flask-Talisman==1.1.0  # Updated version
 gunicorn==21.2.0
 
 # For linting and code formatting
